jupyter/jupyter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-deployment
spec:
  selector:
    matchLabels:
      app: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
      - name: jupyter-container
        image: hyunsoolee0506/pyspark-jupyter:3.5.0
        ports:
          - containerPort: 8888
        volumeMounts:
        - name: s3-data
          mountPath: /home/jovyan/work
      - name: s3-sync
        image: amazon/aws-cli
        command: ["/bin/sh"]
        args:
          - "-c"
          - |
            while true; do
              aws s3 sync s3://chunjae-aidt-data-storage/nks-sync /home/jovyan/work --endpoint-url=https://kr.object.ncloudstorage.com;
              sleep 20;
              aws s3 sync /home/jovyan/work s3://chunjae-aidt-data-storage/nks-sync --endpoint-url=https://kr.object.ncloudstorage.com;
              sleep 3600;
            done
        volumeMounts:
        - name: s3-data
          mountPath: /home/jovyan/work
      volumes:
      - name: s3-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-service
  labels:
    app: jupyter
spec:
  type: LoadBalancer
  selector:
    app: jupyter
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
